# media-manglers

./: .gitignore  AGENTS.md  AUDIO_MANGLER.txt  Audio Mangler.ps1  HELPERS_NOTES_Video_Mangler.txt  LICENSE  PROJECT_CHAT_PLAYBOOK.md  README.md  README.txt  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.0.txt  RELEASE_NOTES_v0.4.0.txt  THIRD_PARTY_NOTICES.md  THIRD_PARTY_NOTICES.txt  TODO.md  VIDEO_MANGLER.txt  Video Mangler.ps1  pyproject.toml  video_to_codex_package.ps1
AREA51/: Build-Exe.ps1  Run-AI-Local-Mode-Matrix.ps1  Run-ArtifactParityChecks.ps1  Run-AudioSmokeTest.ps1  Run-SmokeTest.ps1  Validate-AudioManglerPackage.ps1  Validate-VideoToCodexPackage.ps1
docs/benchmarks/: 2026-04-17-german-to-english-transcription-benchmark.md  2026-04-20-brooklands-hybrid-followup.md  2026-04-20-brooklands-source-transcript-followup.md  2026-04-20-brooklands-source-transcript-recall-fix.md  2026-04-20-short-suite-pilot.md  BENCHMARK_PROGRAM.md  BENCHMARK_RESULTS_SCHEMA.md  README.txt
docs/guides/: AUDIO_MANGLER.txt  README.txt  VIDEO_MANGLER.txt
exports/: media-manglers-squashed.patch
glossaries/: de-en-sim-racing.json
governance/: CODEX_INTERACTION_PROTOCOL.md  CURRENT_PROJECT_TRUTH.md  FOREGROUND_VISUAL_WORK_PROTOCOL.md  LATEST_EVIDENCE_POINTER.md
src/media_manglers/: cli.py  (+2 more)
tests/: Run-SmokeTest.ps1  Validate-VideoToCodexPackage.ps1  test_benchmark_manifests.py  test_benchmark_report.py  test_contracts.py  test_hybrid_text.py  test_readmes.py  test_release_guidance.py  test_transcripts.py  test_translation_provider.py  test_whisper_local.py  test_whisper_runtime.py
(+45 files in other folders)
